# Net_shield

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_utf8.md  QUICK_FIX_UDP.md  README.md  SECURITY_ASSESSMENT.md  SECURITY_ASSESSMENT_utf8.md  TEST_RESULTS.md  TEST_RESULTS_utf8.md  asthak_run.txt  build2.txt  build_check.txt  build_log.txt  build_log2.txt  build_log2_utf8.txt  build_log_utf8.txt  build_out.txt  build_out_a.txt  build_output.txt  build_result.txt  buildlog.txt  buildlog2.txt  clean_build_log.txt  cmake_out.txt  final_build.txt  main.cpp  mk_log.txt  mk_log2.txt  rules.yar  simulate_all_threats.py  simulate_attack.py  simulate_file_attack.py  test_engine.bat  yara_build.txt
app/: .gitignore  build_log.txt  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
app/js/: adminStatus.js  alerts.js  buttons.js  chart.js  engine.js  log.js  logParser.js  login.js  main.js  network.js  profile.js  router.js  state.js  threats.js  toast.js  utils.js
app/styles/: base.css  components.css  index.css  layout.css  login.css
backend/: .gitignore  package-lock.json  package.json  server.js
backend/src/config/: index.js
backend/src/controllers/: agentController.js  authController.js
backend/src/db/: index.js
backend/src/errors/: AppError.js  errorHandler.js
backend/src/middleware/: auth.js
backend/src/routes/: agent.js
backend/src/utils/: helpers.js
include/: asthak_common.h  netsentinel_common.h
installer/: AsthakSetup.iss  config_template.json
legal/: EULA.txt  PRIVACY_POLICY.txt
scripts/: add_defender_exclusions.ps1  extent_test.ps1  generate_code_signing_cert.ps1  smoke_test.ps1
src/core/: connection_monitor.cpp  connection_monitor.h  process_cache.cpp  process_cache.h
src/hooks/: asthak_hook.cpp  netsentinel_hook.cpp
src/monitor/: file_monitor.cpp  file_monitor.h  process_monitor.cpp  process_monitor.h  registry_monitor.cpp  registry_monitor.h
src/network/: packet_capture.cpp  packet_capture.h  tcp_table.cpp  tcp_table.h  udp_table.cpp  udp_table.h  wfp_manager.cpp  wfp_manager.h
src/risk/: dns_analyzer.cpp  dns_analyzer.h  hash_scanner.cpp  hash_scanner.h  pe_analyzer.cpp  pe_analyzer.h  risk_assessment.cpp  risk_assessment.h  threat_intel.cpp  threat_intel.h  vt_lookup.cpp  vt_lookup.h  yara_scanner.cpp  yara_scanner.h
src/safety/: amsi_scanner.cpp  amsi_scanner.h  firewall_blocker.cpp  firewall_blocker.h  kill_switch.cpp  kill_switch.h  quarantine.cpp  quarantine.h  ransomware_guard.cpp  ransomware_guard.h  response_engine.cpp  response_engine.h  sandbox.cpp  self_protection.cpp  self_protection.h
src/telemetry/: etw_consumer.cpp  etw_consumer.h
src/utils/: a.md  auto_updater.cpp  auto_updater.h  config.cpp  config.h  false_positive_filter.cpp  false_positive_filter.h  logger.cpp  logger.h  process_verification.cpp  process_verification.h  string_utils.cpp  string_utils.h
test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/: manual_test_checklist.md  test_output.txt
web/: .gitignore  package-lock.json  package.json
web/public/: index.html
web/src/: App.js  index.css
web/src/components/: Navbar.js
web/src/context/: AuthContext.js
web/src/pages/: Dashboard.js  DocsPage.js  LandingPage.js  LoginPage.js  PricingPage.js  RegisterPage.js
